<resources>
    <string name="app_name">NavDrawerDemo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_1">
        Hum tere bin ab reh nahi sakte
Tere bina kya wajood mera (x2)
Tujhse juda gar ho jaayenge
Toh khud se hi ho jaayenge judaa
Kyunki tum hi ho
Ab tum hi ho
Zindagi ab tum hi ho
Chain bhi, mera dard bhi
Meri aashiqui ab tum hi ho
Tera mera rishta hai kaisa
Ik pal door gawara nahi
Tere liye har roz hai jeete
Tujh ko diya mera waqt sabhi
Koi lamha mera na ho tere bina
Har saans pe naam tera
Kyunki tum hi ho
Ab tum hi ho
Zindagi ab tum hi ho

        </string>
    <string name="song_2">Tuhi yeh mujhko bata de

Chahun main ya na
Apne tu dil ka pata de
Chahun main ya na x (2)

Itna bata du tujhko
Chahat pe apni mujhko
Yoon to nahin ikhtiaar
Phir bhi ye socha dil ne
        Ab jo laga hu milne
Pucchun tujhe ek baar
Tuhi yeh mujhko bata de
Chahun main ya na
Apne tu dil ka pata de
Chahun main ya na

Aisi kabhi pehle huyi na thi khaahishen
Kisise bhi milne ki na ki thi koshishen
        Uljhan meri suljha de
Chahun main ya na
Aakhon aakhon mein jata de
Chahun main ya na

Mere chhote-chhote khwab hain
Khwabon me geet hain
Geeto me zindagi hai
Chahat hai, preet hai
Abhi main na dekhun khaab wo
Jinme na tu mile
Le khole hoth maine
Ab taq the jo sile
Mujhko na jitna mujhpe
Utna iss dil ko tujhpe hone laga aitbar
Tanha lamhon mein apni
Bunti hu tere sapne
Tujhse hua mujhko pyar
Poochhungi tujhko kabhi na
Chahun main ya na
Tere khwaabon me ab jeena
Chahun main kyun na

Tuhi yeh mujhko bata de
Chahun main ya na
Apne tu dil ka pata de
Chahun main ya na


    </string>
    <string name="song_3">Kehte hain  Kuda ne iss

Kehte hain

Khuda ne iss jahaan mein

Sabhi ke liye kisi na kisi ko hai banaaya

har kisi ke liye

Tera milna hai uss rab ka ishaara

Maano mujhko banaya tere jaise hi kisi ke liye


Kehte hain:

Khuda ne iss jahaan mein

Sabhi ke liye kisi na kisi ko hai banaaya

har kisi ke liye

Tera milna hai uss rab ka ishaara

Maano mujhko banaya tere jaise hi kisi ke liye


Kuch toh hai tujh se raabta

Kuch toh hai tujh se raabta

Kaise hum jaane, hume kya pata

Kuch toh hai tujh se raabta

Tu humsafar hai

Phir kya fikar hai

Jeene ki wajah hi yehi hai

Marna issi ke liye
        
    </string>
    <string name="song_4">
        Yahhin doobe din mere

O.. Yahin doobe din mere

Yahin hote hain savere

Yahin marna aur jeena

Yahin Mandir aur Madeena... x2


Teri galiyan... galliyan teri, galliyan..

Mujhko bhaavein galiyan, teri galliyan

Teri galiyan...galiyaan teri, galliyan..

Yuhin tadpavein, galliyan teri, Galliyan...


Tu meri neendo me sota hai

Tu mere ashqo mein rota hai

Sargoshi si hai khayalon mein

Tu na ho, phir bhi tu hota hai

Hai sila.. tu mere dard ka


Mere dil ki duaayein hain..
        
    </string>
    <string name="song_5">Yaariyan ve


        Yaariyan ve... Yaariyan

Yaariyan ve... yaariyan ve..

Yaariyaan... yaa....


Dil mera hai nasamajh kitna

Besabar ye bewkoof bada

Chahta hai kitna tujhe

Khud magar nahi jaan sakaa


Is dard-e-dil ki sifarish

Ab kar de koi yahaan

Ki mill jaaye isey woh baarish

Jo bhigaa de poori tarah (x2)


Yaariyan ve... Yaariyan...

        
    </string>
    <string name="song_6">
        Aaj blue hai paani

        Paani pani paani paani paani

        Aur din bhi sunny

        Sunny sunny sunny sunny sunny

        Aajaao on the beach yaar

        Photo meri kheench, phooti kismat hogi teri

        Gar tune ye baat na maani (x2)



        O ho... O ho...

        
    </string>
    <string name="song_7">

        Hmm...

Bekhayali mein bhi tera hi khayal aaye

Kyun bichhadna hai zaroori ye sawaal aaye

Teri nazdeekiyon ki khushi behisaab thi

Hisse mein faasle bhi tere bemisaal aaye


Main jo tumse door hoon

Kyun door main rahoon

Tera guroor hoon

Aa tu faasla mita

Tu khwaab sa mila

Kyun khwaab tod doon


Bekhayali mein bhi tera hi khayal aaye

Kyun judaai de gaya tu ye sawaal aaye

Thoda sa main khafa ho gaya apne aap se

Thoda sa tujhpe bhi bewajah hi malaal aaye
        
    </string>
    <string name="song_8">
        Meri raahein tere tak hai

Tujhpe hi toh mera haq hai

Ishq mera tu beshak hai

Tujhpe hi toh mera haq hai


Saath chhodunga na, tere piche aaunga

Chheen lunga ya, Khuda se maang launga

Tere naal taqdeeran likhwaunga main

Main tera ban jaunga

Main tera ban jaunga


Sonh teri main kasam yahi khaunga

Kite waadeya nu umra nibhaunga

Tujhe har vaari apna banaunga

Main tera ban jaunga

Main tera ban jaunga


Na na na.. na na na...

Na na na.. o yeh... (x2)

        
    </string>
    <string name="song_9">



                Ha....haaaa...haaann..

                Haa...haaa...haaaa...

                Ha....haaaa...haaann..


                Hmm..

                Baatein zaroori hai,

                Tera milna bhi zaroori,

                Maine mita deni,

                Ye jo teri meri doori..

                Hmm..

                Baatein zaroori hai,

                Tera milna bhi zaroori,

                Maine mita deni,

                Ye jo teri meri doori..


                Jhhothi hai wo raahein saari duniya ki,

                Ishq jahaan na chale,

                Tera hoona mera hona kya hona,

                Agar na dono mile..
        
    </string>
    <string name="song_10">
        Hansta rehta hoon

        Tujhse mil kar kyu aajkal


        Badle badle hain

        Mere tevar kyun aajkal

        Aankhein meri har jagah

        Dhoondhe tujhe bewajah

        Yeh main hoon ya

        Koi aur hai meri tarah...

        Kaise hua, kaise hua

        Tu itna zaroori, kaise hua (x2)

        
    </string>
    <string name="song_11">
        Tu aata hai seene mein

        Jab jab saansein bharti hoon

        Tere dil ki galiyon se

        Main har roz guzarti hoon


        Hawaa ke jaise chalta hai tu

        Main ret jaisi udti hoon

        Kaun tujhe yun pyar karega

        Jaise main karti hoon

        
    </string>
    <string name="song_12">
        We are The Sounds Of The Street!

        Aya Hun Aaj Main,

        Leke Jaunga Dil Tera,

        Roke Koyi Mujhe,

        Toke Koyi Mujhe,

        Dunga Use Jahan Se Mita,

        Muh Kala, Muqabla, Laila, O Ho Laila,

        Muqabla Subhanallah Laila, Oh Ho Laila.


    </string>
    <string name="lyrics">Lyrics</string>
    <string name="song_description">Song Description</string>
    <string name="song_name">Song Name</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="sync">Sync</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="textview">TextView</string>
    <string name="ironman">Ironman</string>
    <string name="hello_jarvis">Hello JARVIS</string>
</resources>