<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <!-- First menu -->


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_message"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/message" />

        <item
            android:id="@+id/menu_sync"
            android:icon="@drawable/ic_menu_sync"
            android:title="@string/sync" />
        <item
            android:id="@+id/menu_trash"
            android:icon="@drawable/ic_menu_trash"
            android:title="@string/trash" />

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

    <!-- Second menu -->

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_login"
                    android:icon="@drawable/ic_menu_login"
                    android:title="@string/login" />

            </group>
        </menu>

    </item>

    <!-- Third menu -->
    <item android:title="@string/communicate">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/menu_rate_us"
                    android:icon="@drawable/ic_menu_rate_us"
                    android:title="@string/rate_us" />
            </group>

        </menu>
    </item>
</menu>